Chore: fix mission api